@@ -2,3 +2,5 @@
 *.pyo
 __pycache__/
 venv/
+.idea/
+*.egg-info/
