@@ -1,1 +1,1 @@
-# This file is necessary to make this directory a package.
+from pysmi.borrower.pyfile import PyFileBorrower
