@@ -1,1 +1,3 @@
-# This file is necessary to make this directory a package.
+from pysmi.parser.smiv1 import SmiV1Parser
+from pysmi.parser.smiv1compat import SmiV1CompatParser
+from pysmi.parser.smiv2 import SmiV2Parser
