@@ -1,1 +1,5 @@
-# This file is necessary to make this directory a package.
+from pysmi.reader.callback import CallbackReader
+from pysmi.reader.ftpclient import FtpReader
+from pysmi.reader.httpclient import HttpReader
+from pysmi.reader.localfile import FileReader
+from pysmi.reader.url import getReadersFromUrls
