@@ -1,1 +1,3 @@
-# This file is necessary to make this directory a package.
+from pysmi.searcher.pyfile import PyFileSearcher
+from pysmi.searcher.pypackage import PyPackageSearcher
+from pysmi.searcher.stub import StubSearcher
